@@ -296,6 +296,27 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|parseArgs
+argument_list|(
+name|args
+argument_list|)
+operator|.
+name|upgrade
+argument_list|()
+expr_stmt|;
+block|}
+DECL|method|parseArgs
+specifier|static
+name|IndexUpgrader
+name|parseArgs
+parameter_list|(
+name|String
+index|[]
+name|args
+parameter_list|)
+throws|throws
+name|IOException
+block|{
 name|String
 name|path
 init|=
@@ -374,19 +395,6 @@ block|}
 elseif|else
 if|if
 condition|(
-name|path
-operator|==
-literal|null
-condition|)
-block|{
-name|path
-operator|=
-name|arg
-expr_stmt|;
-block|}
-elseif|else
-if|if
-condition|(
 literal|"-dir-impl"
 operator|.
 name|equals
@@ -432,6 +440,19 @@ name|args
 index|[
 name|i
 index|]
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|path
+operator|==
+literal|null
+condition|)
+block|{
+name|path
+operator|=
+name|arg
 expr_stmt|;
 block|}
 else|else
@@ -499,6 +520,7 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+return|return
 operator|new
 name|IndexUpgrader
 argument_list|(
@@ -512,10 +534,7 @@ name|out
 argument_list|,
 name|deletePriorCommits
 argument_list|)
-operator|.
-name|upgrade
-argument_list|()
-expr_stmt|;
+return|;
 block|}
 DECL|field|dir
 specifier|private
@@ -592,15 +611,27 @@ name|matchVersion
 argument_list|,
 literal|null
 argument_list|)
+argument_list|,
+name|deletePriorCommits
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+literal|null
+operator|!=
+name|infoStream
+condition|)
+block|{
+name|this
+operator|.
+name|iwc
 operator|.
 name|setInfoStream
 argument_list|(
 name|infoStream
 argument_list|)
-argument_list|,
-name|deletePriorCommits
-argument_list|)
 expr_stmt|;
+block|}
 block|}
 comment|/** Creates index upgrader on the given directory, using an {@link IndexWriter} using the given    * config. You have the possibility to upgrade indexes with multiple commit points by removing    * all older ones. */
 DECL|method|IndexUpgrader
