@@ -476,6 +476,48 @@ name|lucene
 operator|.
 name|store
 operator|.
+name|FSDirectory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|SimpleFSDirectory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|NIOFSDirectory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
 name|RAMDirectory
 import|;
 end_import
@@ -780,6 +822,113 @@ name|Directory
 argument_list|>
 name|oldIndexDirs
 decl_stmt|;
+comment|/**    * Randomizes the use of some of hte constructor variations    */
+DECL|method|newIndexUpgrader
+specifier|private
+specifier|static
+name|IndexUpgrader
+name|newIndexUpgrader
+parameter_list|(
+name|Directory
+name|dir
+parameter_list|)
+block|{
+specifier|final
+name|boolean
+name|streamType
+init|=
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+decl_stmt|;
+specifier|final
+name|int
+name|choice
+init|=
+name|_TestUtil
+operator|.
+name|nextInt
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+literal|0
+argument_list|,
+literal|2
+argument_list|)
+decl_stmt|;
+switch|switch
+condition|(
+name|choice
+condition|)
+block|{
+case|case
+literal|0
+case|:
+return|return
+operator|new
+name|IndexUpgrader
+argument_list|(
+name|dir
+argument_list|,
+name|TEST_VERSION_CURRENT
+argument_list|)
+return|;
+case|case
+literal|1
+case|:
+return|return
+operator|new
+name|IndexUpgrader
+argument_list|(
+name|dir
+argument_list|,
+name|TEST_VERSION_CURRENT
+argument_list|,
+name|streamType
+condition|?
+literal|null
+else|:
+name|System
+operator|.
+name|err
+argument_list|,
+literal|false
+argument_list|)
+return|;
+case|case
+literal|2
+case|:
+return|return
+operator|new
+name|IndexUpgrader
+argument_list|(
+name|dir
+argument_list|,
+name|newIndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+literal|null
+argument_list|)
+argument_list|,
+literal|false
+argument_list|)
+return|;
+default|default:
+name|fail
+argument_list|(
+literal|"case statement didn't get updated when random bounds changed"
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+literal|null
+return|;
+comment|// never get here
+block|}
 annotation|@
 name|BeforeClass
 DECL|method|beforeClass
@@ -6103,19 +6252,9 @@ name|name
 argument_list|)
 argument_list|)
 decl_stmt|;
-operator|new
-name|IndexUpgrader
+name|newIndexUpgrader
 argument_list|(
 name|dir
-argument_list|,
-name|newIndexWriterConfig
-argument_list|(
-name|TEST_VERSION_CURRENT
-argument_list|,
-literal|null
-argument_list|)
-argument_list|,
-literal|false
 argument_list|)
 operator|.
 name|upgrade
@@ -6131,6 +6270,257 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+block|}
+block|}
+DECL|method|testCommandLineArgs
+specifier|public
+name|void
+name|testCommandLineArgs
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+for|for
+control|(
+name|String
+name|name
+range|:
+name|oldIndexDirs
+operator|.
+name|keySet
+argument_list|()
+control|)
+block|{
+name|File
+name|dir
+init|=
+name|_TestUtil
+operator|.
+name|getTempDir
+argument_list|(
+name|name
+argument_list|)
+decl_stmt|;
+name|File
+name|dataFile
+init|=
+operator|new
+name|File
+argument_list|(
+name|TestBackwardsCompatibility
+operator|.
+name|class
+operator|.
+name|getResource
+argument_list|(
+literal|"index."
+operator|+
+name|name
+operator|+
+literal|".zip"
+argument_list|)
+operator|.
+name|toURI
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|_TestUtil
+operator|.
+name|unzip
+argument_list|(
+name|dataFile
+argument_list|,
+name|dir
+argument_list|)
+expr_stmt|;
+name|String
+name|path
+init|=
+name|dir
+operator|.
+name|getAbsolutePath
+argument_list|()
+decl_stmt|;
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|args
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|String
+argument_list|>
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|)
+block|{
+name|args
+operator|.
+name|add
+argument_list|(
+literal|"-verbose"
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|)
+block|{
+name|args
+operator|.
+name|add
+argument_list|(
+literal|"-delete-prior-commits"
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|)
+block|{
+comment|// TODO: need to better randomize this, but ...
+comment|//  - LuceneTestCase.FS_DIRECTORIES is private
+comment|//  - newFSDirectory returns BaseDirectoryWrapper
+comment|//  - BaseDirectoryWrapper doesn't expose delegate
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|FSDirectory
+argument_list|>
+name|dirImpl
+init|=
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|?
+name|SimpleFSDirectory
+operator|.
+name|class
+else|:
+name|NIOFSDirectory
+operator|.
+name|class
+decl_stmt|;
+name|args
+operator|.
+name|add
+argument_list|(
+literal|"-dir-impl"
+argument_list|)
+expr_stmt|;
+name|args
+operator|.
+name|add
+argument_list|(
+name|dirImpl
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|args
+operator|.
+name|add
+argument_list|(
+name|path
+argument_list|)
+expr_stmt|;
+name|IndexUpgrader
+name|upgrader
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|upgrader
+operator|=
+name|IndexUpgrader
+operator|.
+name|parseArgs
+argument_list|(
+name|args
+operator|.
+name|toArray
+argument_list|(
+operator|new
+name|String
+index|[
+literal|0
+index|]
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|AssertionError
+argument_list|(
+literal|"unable to parse args: "
+operator|+
+name|args
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+name|upgrader
+operator|.
+name|upgrade
+argument_list|()
+expr_stmt|;
+name|Directory
+name|upgradedDir
+init|=
+name|newFSDirectory
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|checkAllSegmentsUpgraded
+argument_list|(
+name|upgradedDir
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|upgradedDir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 block|}
 DECL|method|testUpgradeOldSingleSegmentIndexWithAdditions
@@ -6376,19 +6766,9 @@ argument_list|(
 name|dir
 argument_list|)
 decl_stmt|;
-operator|new
-name|IndexUpgrader
+name|newIndexUpgrader
 argument_list|(
 name|dir
-argument_list|,
-name|newIndexWriterConfig
-argument_list|(
-name|TEST_VERSION_CURRENT
-argument_list|,
-literal|null
-argument_list|)
-argument_list|,
-literal|false
 argument_list|)
 operator|.
 name|upgrade
